<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_find"
        android:icon="@drawable/ic_search"
        android:title="@string/find"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_replace"
        android:title="@string/replace"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_go_to_line"
        android:title="@string/go_to_line"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_format_code"
        android:title="@string/format_code"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/editor_settings"
        app:showAsAction="never" />
    
</menu>
