<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_folder"
            android:title="My Projects" />
        <item
            android:id="@+id/nav_workflows"
            android:icon="@drawable/ic_workflow"
            android:title="Workflows" />
        <item
            android:id="@+id/nav_builds"
            android:icon="@drawable/ic_build"
            android:title="Build History" />
    </group>
    
    <group android:checkableBehavior="none">
        <item android:title="Settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_github_token"
                    android:icon="@drawable/ic_key"
                    android:title="@string/github_token" />
            </menu>
        </item>
    </group>
    
    <group android:checkableBehavior="none">
        <item android:title="Help">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help"
                    android:title="Help & Documentation" />
            </menu>
        </item>
    </group>

</menu>
